No styles, no capabilities to create poll

--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -1,21 +1,35 @@
-<h1>{{ poll.title }}</h1>
-{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-<p>Created by <a href=""></a>{{ poll.user }}, {{ poll.pub_date }}</p>
+{% extends "polls/base.html" %}
 
-<ul>
-    {% for question in poll.question_set.all %}
-        <li>
-            {{ question.question_text }}
-            <ul>
-                {% for answer in answer_list.pop %}
-                    <li>
-                    {{ answer.answer_text }} - {{ answer.users.all.count|default:0 }}
-                    {% if answer in selected_answers %}
-                        +
-                    {% endif %}
-                    </li>
-                {% endfor %}
-            </ul>
-        </li>
-    {% endfor %}
-</ul>
+{% block title %}Результаты опроса {{ poll.title }}{% endblock %}
+
+{% block content %}
+    <h1>{{ poll.title }}</h1>
+    {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+    <p>Created by <a href=""></a>{{ poll.user }}, {{ poll.pub_date }}</p>
+
+    <ul>
+        {% for question in poll.question_set.all %}
+            <li>
+                {{ question.question_text }}
+                <ul>
+                    {% for answer in answer_list.pop %}
+                        <li>
+                            {% if answer.users.all %}
+                                {{ answer.answer_text }} -
+                                <a href="/polls/{{ poll.id }}/questions/{{ question.id }}/answers/{{ answer.id }}/"
+                                   target="_blank">
+                                    {{ answer.users.all.count}}
+                                </a>
+                            {% else %}
+                                {{ answer.answer_text }} - 0
+                            {% endif %}
+                            {% if answer in selected_answers %}
+                                +
+                            {% endif %}
+                        </li>
+                    {% endfor %}
+                </ul>
+            </li>
+        {% endfor %}
+    </ul>
+{% endblock %}
