--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,28 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Opros: Index</title>
-</head>
-<body>
+{% extends "polls/base.html" %}
 
-{% if not user.is_authenticated %}
-    <a href="soc/login/google-oauth2/?next=/">Login with Google account!</a>
-{% endif %}
+{% block title %}Opros{% endblock %}
 
-{% if top_polls %}
-    <ul>
-    {% for poll in top_polls %}
-        <li>
-            <a href="/polls/{{ poll.id }}/">
-                {{ poll.title }}
-            </a>
-        </li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No polls are available.</p>
-{% endif %}
+{% block content %}
+    {% if not user.is_authenticated %}
+        <a href="/soc/login/google-oauth2/?next=/">Login with Google account!</a>
+    {% endif %}
 
-</body>
-</html>
+    {% if top_polls %}
+        <ul>
+            {% for poll in top_polls %}
+                <li>
+                    <a href="/polls/{{ poll.id }}/">
+                        {{ poll.title }}
+                    </a>
+                </li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <p>No polls are available.</p>
+    {% endif %}
+{% endblock %}
