--- a/polls/templates/polls/question.html
+++ b/polls/templates/polls/question.html
@@ -2,10 +2,11 @@
 
 {% block title %}Вопрос: {{ question.question_text }}{% endblock %}
 
-{% block content %}
-    <h1>{{ question.question_text }}</h1>
-    {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+{% block header %}
+<h1>{{ question.question_text }}</h1>
+{% endblock %}
 
+{% block content %}
     <form action="{% url 'polls:vote' question.poll.id question.id %}" method="post">
         {% csrf_token %}
         {% for answer in question.answer_set.all %}
