--- a/polls/templates/polls/user_list.html
+++ b/polls/templates/polls/user_list.html
@@ -2,6 +2,10 @@
 
 {% block title %}User List{% endblock %}
 
+{% block header %}
+    <h1>Этот ответ выбрали:</h1>
+{% endblock %}
+
 {% block content %}
     <ul>
         {% for user in user_list %}
