--- a/polls/templates/polls/poll.html
+++ b/polls/templates/polls/poll.html
@@ -2,11 +2,13 @@
 
 {% block title %}Опрос: {{ poll.title }}{% endblock %}
 
-{% block content %}
+{% block header %}
     <h1>{{ poll.title }}</h1>
-    {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
     <p>{{ poll.question_set.all.count }} questions</p>
-    <p>Created by <a href=""></a>{{ poll.user }}, {{ poll.pub_date }}</p>
+    <p>Created by <a href="/users/{{ poll.user.id }}">{{ poll.user }}</a>, {{ poll.pub_date }}</p>
+{% endblock %}
+
+{% block content %}
     <a href={% url 'polls:question' poll.id poll.question_set.first.id %} {{poll.question_set.first}}>Start</a>
     <a href="{% url 'polls:poll_results' poll.id %}">Watch results</a>
 {% endblock %}
