--- a/polls/templates/polls/profile.html
+++ b/polls/templates/polls/profile.html
@@ -2,8 +2,11 @@
 
 {% block title %}Profile: {{ user.username }}{% endblock %}
 
-{% block content %}
+{% block header %}
     <h1>username: {{ user.username }}</h1>
+{% endblock %}
+
+{% block content %}
     <p>email: {{ user.email }}</p>
     <p>first_name: {{ user.first_name }}</p>
     <p>last_name: {{ user.last_name }}</p>
