--- a/polls/templates/polls/poll.html
+++ b/polls/templates/polls/poll.html
@@ -5,10 +5,15 @@
 {% block header %}
     <h1>{{ poll.title }}</h1>
     <p>{{ poll.question_set.all.count }} questions</p>
+    {% if user.id == poll.user.id %}
+        <a href="/polls/{{ poll.id }}/questions/new">Добавить вопрос</a>
+    {% endif %}
     <p>Created by <a href="/users/{{ poll.user.id }}">{{ poll.user }}</a>, {{ poll.pub_date }}</p>
 {% endblock %}
 
 {% block content %}
-    <a href={% url 'polls:question' poll.id poll.question_set.first.id %} {{poll.question_set.first}}>Start</a>
-    <a href="{% url 'polls:poll_results' poll.id %}">Watch results</a>
+    {% if poll.question_set.first %}
+        <a href={% url 'polls:question' poll.id poll.question_set.first.id %} {{poll.question_set.first}}>Start</a>
+        <a href="{% url 'polls:poll_results' poll.id %}">Watch results</a>
+    {% endif %}
 {% endblock %}
