--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <a href="/">Opros: Главная</a>
     {% if user.is_authenticated %}
         <a href="/polls/new/">Создать опрос</a>
         <a href="/profile/">Профиль: {{ user.username }}</a>
