--- a/polls/templates/polls/profile.html
+++ b/polls/templates/polls/profile.html
@@ -3,28 +3,33 @@
 {% block title %}Profile: {{ user1.username }}{% endblock %}
 
 {% block header %}
-    <h1>username: {{ user1.username }}</h1>
+    
 {% endblock %}
 
 {% block content %}
-    <p>email: {{ user1.email }}</p>
-    <p>first_name: {{ user1.first_name }}</p>
-    <p>last_name: {{ user1.last_name }}</p>
-    <p>last_login: {{ user1.last_login }}</p>
-    <p>date_joined: {{ user1.date_joined }}</p>
-    <p>is_active: {{ user1.is_active }}</p>
-    <p>is_staff: {{ user1.is_staff }}</p>
-    {% if poll_list %}
-        <h2>Опросы:</h2>
-    {% endif %}
-    <ul>
-        {% for poll in poll_list %}
-            <li>
-                <a href="/polls/{{ poll.id }}/">
-                    {{ poll.title }}
-                </a>
-                {{ poll.polls_viewers.count }}
-            </li>
-        {% endfor %}
-    </ul>
+    <div id="profile-container">
+        <p class="profile-ident">Пользователь: {{ user1.username }}</p>
+        <p class="profile-ident">Имя: {{ user1.first_name }}</p>
+        <p class="profile-ident">Фамилия: {{ user1.last_name }}</p>
+        <p class="profile-ident">e-mail: {{ user1.email }}</p>
+        <p class="profile-ident">Дата регистрации: {{ user1.date_joined }}</p>
+        <p class="profile-ident">Последняя авторизация: {{ user1.last_login }}</p>
+        {% if user1.is_active %}<p class="profile-ident">В сети</p>{% else %}<p class="profile-ident">Не в сети</p>{% endif %}
+        {% if user1.is_staff %}<p class="profile-ident">Админ</p>{% else %}<p></p>{% endif %}
+        <!--<p class="profile-ident">Онлайн: {{ user1.is_active }}</p>
+        <p class="profile-ident">Админ: {{ user1.is_staff }}</p> -->
+        {% if poll_list %}
+            <h2>Популярные опросы:</h2>
+        {% endif %}
+        <ul>
+            {% for poll in poll_list %}
+                <li>
+                    <a href="/polls/{{ poll.id }}/">
+                        {{ poll.title }}
+                    </a>
+                    {{ poll.polls_viewers.count }}
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
 {% endblock %}
