--- a/polls/templates/polls/profile.html
+++ b/polls/templates/polls/profile.html
@@ -24,7 +24,7 @@
         <ul>
             {% for poll in poll_list %}
                 <li>
-                    <a href="/polls/{{ poll.id }}/">
+                    <a class="a-styles" href="/polls/{{ poll.id }}/">
                         {{ poll.title }}
                     </a>
                     {{ poll.polls_viewers.count }}
