--- a/polls/static/polls/style.css
+++ b/polls/static/polls/style.css
@@ -27,11 +27,11 @@ li {
     font-weight: bold;
 }
 
-li > a:link {color: #0C4762;}
-li > a:visited {color: #0C4762;}
-li > a:hover {color: #007CB9;}
-li > a:focus {color: #0C4762;}
-li > a:active {color: rgb(112, 153, 245);}
+.a-styles:link {color: #0C4762;}
+.a-styles:visited {color: #0C4762;}
+.a-styles:hover {color: #007CB9;}
+.a-styles:focus {color: #0C4762;}
+.a-styles:active {color: rgb(112, 153, 245);}
 
 #logo {
     font-size: 2.2em;
@@ -50,22 +50,41 @@ li > a:active {color: rgb(112, 153, 245);}
     color: rgba(238, 255, 254, 0.87);
 }
 
-#google-account {
-    position: absolute;
-    top: 1.9em;
-    right: 2em;
-    color: rgba(238, 255, 254, 0.87);
-}
-
 #head-butt-right {
     position: absolute;
     top: 1.9em;
-    right: 2em;
+    right: 5em;
 }
 
 #head-butt-right > a {
-    margin-left: 2.4em;
+    margin-left: 2em;
 }
+
+
+#google-account {
+    display: block;
+    position: absolute;
+    top: 1.9em;
+    right: 5em;
+    color: rgba(238, 255, 254, 0.87);
+}
+
+.google-pic {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 0.7em;
+    right: 2em;
+}
+
+.unlogged {
+    background-image: url(unlogged.png);
+}
+
+.logged {
+    background-image: url(logged.png);
+}
+
 
 #content {
     margin-left: 4em;
@@ -80,3 +99,151 @@ li > a:active {color: rgb(112, 153, 245);}
 .profile-ident {
     margin-left     : 1em;
 }
+
+.content-butts {
+    display: block;
+    margin-bottom: 1em;
+}
+
+.content-butts + p {
+    font-style: italic;
+}
+
+.vote-me {
+    margin-top: 7.5em;
+    margin-bottom: 1em;
+    width: 100px;
+    height: 100%;
+}
+
+.quiz-text {
+    margin-top: 2em;
+    width: 100%;
+    text-align: center;
+}
+
+#id_question_text {
+    width: 20em;
+    height: 1.5em;
+    margin-left: 1em;
+}
+
+.radio {
+  vertical-align: top;
+  width: 17px;
+  height: 17px;
+  margin: 0 300px 0 0;
+}
+.radio + label {
+  cursor: pointer;
+}
+.radio:not(checked) {
+  position: absolute;
+  opacity: 0;
+}
+.radio:not(checked) + label {
+  position: relative;
+  padding: 0 0 0 35px;
+}
+.radio:not(checked) + label:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1em;
+  height: 1em;
+  border: 1px solid #CDD1DA;
+  border-radius: 50%;
+  background: #FFF;
+}
+.radio:not(checked) + label:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  background: #27a0c4;
+  border: 1px solid #CDD1DA;
+  /*box-shadow: inset 0 1px 1px rgba(0,0,0,.5);*/
+  opacity: 0;
+  transition: all .2s;
+}
+.radio:checked + label:after {
+  opacity: 1;
+}
+.radio:focus + label:before {
+  /*box-shadow: 0 0 0 3px rgba(255,255,0,.5);*/
+}
+
+.inputik {
+    color: rgba(238, 255, 254, 0.87);
+    background-color: #0C4762;
+    border: 1px solid #0C4762;
+    border-bottom: 1px solid #0C4762;
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    box-shadow: inset 0 1px 0 0 #0C4762;
+    -webkit-box-shadow: 0 1px 0 0 #0C4762 inset ;
+    -moz-box-shadow: 0 1px 0 0 #0C4762 inset;
+    -ms-box-shadow: 0 1px 0 0 #0C4762 inset;
+    -o-box-shadow: 0 1px 0 0 #0C4762 inset;
+    font-weight: bold;
+    padding: 6px 20px;
+    text-align: center;
+    text-shadow: 0 -1px 0 #0C4762;
+}
+.inputik:hover {
+    opacity:.85;
+    cursor: pointer;
+}
+.inputik:active {
+    border: 1px solid #1e8891;
+    box-shadow: 0 0 10px 5px #1e8891 inset;
+    -webkit-box-shadow:0 0 10px 5px #1e8891 inset ;
+    -moz-box-shadow: 0 0 10px 5px #1e8891 inset;
+    -ms-box-shadow: 0 0 10px 5px #1e8891 inset;
+    -o-box-shadow: 0 0 10px 5px #1e8891 inset;
+}
+
+/* СПИСКИ RESULTS*/
+
+
+.border {
+    width: 40em;
+    list-style: none;
+    padding: 0;
+}
+
+
+.border li {
+    list-style: none;    
+    padding: 7px 20px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+   
+    box-shadow: 2px -2px 5px 0 rgba(0,0,0,.1),
+     -2px -2px 5px 0 rgba(0,0,0,.1),
+    2px 2px 5px 0 rgba(0,0,0,.1),
+    -2px 2px 5px 0 rgba(0,0,0,.1);
+    font-size: 20px;
+    letter-spacing: 2px;
+    transition: 0.3s all linear;
+}
+
+.bord-main{
+     border-left: 10px solid #0C4762;
+}
+
+.bord-add {
+    border-left: 10px solid rgba(12, 71, 98, 0.65); 
+}
+
+.bord-add:hover {
+   border-left: 10px solid rgba(238, 255, 254, 0.87); 
+}
+    
