--- a/polls/templates/polls/base_form.html
+++ b/polls/templates/polls/base_form.html
@@ -5,10 +5,11 @@
 {% block header %}{% endblock %}
 
 {% block content %}
-    <form class="super_form" action="" method="post">
+    <form class="quiz-text super_form" action="" method="post">
         {% csrf_token %}
-        <p><label for="id_{{ field_name }}">{{ text_form }}</label>
-            <textarea name="{{ field_name }}" id="id_{{ field_name }}" required></textarea></p>
-        <input  class="inputik" type="submit" value="Сохранить" />
+        <p><label class="" for="id_{{ field_name }}">{{ text_form }}</label>
+            <textarea class="" name="{{ field_name }}" id="id_{{ field_name }}" required></textarea>
+        </p>
+        <input class="inputik" type="submit" value="Сохранить" />
     </form>
 {% endblock %}
