--- a/polls/templates/polls/poll.html
+++ b/polls/templates/polls/poll.html
@@ -8,7 +8,7 @@
         <a class="content-butts a-styles" href="/polls/{{ poll.id }}/questions/new">Добавить вопрос</a>
     {% endif %}
     {% if poll.question_set.first %}
-        <a class="content-butts a-styles" href={% url 'polls:question' poll.id poll.question_set.first.id %} {{poll.question_set.first}}>Редактировать</a>
+        <a class="content-butts a-styles" href={% url 'polls:question' poll.id poll.question_set.first.id %} {{poll.question_set.first}}>Начать опрос</a>
         <a class="content-butts a-styles" href="{% url 'polls:poll_results' poll.id %}">Посмотреть результаты</a>
         <p>{{ poll.question_set.all.count }} вопросов</p>
     {% endif %}
