Added favicon and titles

--- a/polls/templates/polls/base_form.html
+++ b/polls/templates/polls/base_form.html
@@ -1,6 +1,6 @@
 {% extends "polls/base.html" %}
 
-{% block title %}{% endblock %}
+{% block title %}Новый опрос{% endblock %}
 
 {% block header %}{% endblock %}
 
