--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,6 +1,6 @@
 {% extends "polls/base.html" %}
 
-{% block title %}Opros{% endblock %}
+{% block title %}Главная{% endblock %}
 
 {% block header %}
     {% if not user.is_authenticated %}
