--- a/polls/templates/polls/profile.html
+++ b/polls/templates/polls/profile.html
@@ -1,6 +1,6 @@
 {% extends "polls/base.html" %}
 
-{% block title %}Profile: {{ user1.username }}{% endblock %}
+{% block title %}{{ user1.username }}{% endblock %}
 
 {% block header %}
     
