--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -1,6 +1,6 @@
 {% extends "polls/base.html" %}
 
-{% block title %}Результаты опроса {{ poll.title }}{% endblock %}
+{% block title %}Результаты {{ poll.title }}{% endblock %}
 {% block header %}
     <h1>{{ poll.title }}</h1>
 {% endblock %}
