--- a/polls/templates/polls/user_list.html
+++ b/polls/templates/polls/user_list.html
@@ -1,6 +1,6 @@
 {% extends "polls/base.html" %}
 
-{% block title %}User List{% endblock %}
+{% block title %}Ответ пользователей{% endblock %}
 
 {% block header %}
     <h1>Этот ответ выбрали:</h1>
