--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
    {% load static %}
+    <link rel="shortcut icon" href="{% static "polls/favicon.ico"%}" type="image/x-icon">
     <link rel="stylesheet" href="{% static "polls/style.css" %}" />
-    <title>{% block title %}{% endblock %}</title>
+    <title>ОпросникЪ: {% block title %}{% endblock %}</title>
 </head>
 <body>
    <div id="wrapper">
