--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -24,6 +24,7 @@
 <div id="content">
     {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
     {% block content %}{% endblock %}
+<a href="http://93.76.223.125:8000/"><img src="{% static "polls/reklama.png"%}" alt="Kek"></a>
 </div>
     <div id="footer">
         <div>Подвал Михаила Подвального 2016 ©</div>
